--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,222 +1,598 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
+.catalog {
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
+  align-content: start;
+  align-items: start;
+  justify-content: start;
+
+  width: 100%;
+
+  gap: 0 25px;
+  grid-template-areas: 'filters sorter' 'filters catalog' 'filters pagination';
+  grid-template-columns: 215px 1fr;
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
+  grid-template-rows: min-content 1fr min-content;
+  justify-items: start;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
+.catalog__cards {
+  margin: 30px 0 0;
 }
 
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
+.cards {
+  display: grid;
+  align-content: flex-start;
+  justify-content: flex-start;
+
+  gap: 20px;
+  grid-area: catalog;
+  grid-template-columns: repeat(3, 1fr);
 }
 
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
+.catalog-sort {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+
+  width: 100%;
+  padding-top: 3px;
+
+  font-size: 16px;
+  line-height: 20px;
+
+  letter-spacing: 0.05em;
+
+  grid-area: sorter;
+}
+
+.catalog-sort__title {
+  margin: 0 20px 0 0;
+
+  font: inherit;
+
+  color: #000000;
+}
+
+.catalog-sort__type {
+  display: flex;
+
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
+  color: #585757;
+}
+
+.catalog-sort__type-button {
   position: relative;
-  padding: 4rem 0;
+
+  padding: 0;
+
+  color: #585757;
+  border: none;
+  background-color: rgba(255, 255, 255, 0);
+
+  cursor: pointer;
+  transition: color 0.3s ease, outline-color 0.3s ease;
+  letter-spacing: 0.05em;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.catalog-sort__type-button:not(:last-child) {
+  margin-right: 30px;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.catalog-sort__type-button:hover {
+  color: #c90606;
 }
 
-.center::before,
-.center::after {
+.catalog-sort__type-button:focus {
+  outline: 1px solid #c90606;
+  outline-offset: 1px;
+}
+
+.catalog-sort__type-button--active {
+  color: #000000;
+
+  pointer-events: none;
+}
+
+.catalog-sort__type-button--active::before {
+  bottom: -3px;
+  position: absolute;
+
+  width: 100%;
+  height: 2px;
+
+  background-color: #c90606;
+
   content: '';
+}
+
+.catalog-sort__order {
+  display: flex;
+  align-items: center;
+
+  margin-right: 9px;
+  margin-left: auto;
+}
+
+.catalog-sort__order-button {
+  position: relative;
+
+  width: 0;
+  height: 0;
+  padding: 0;
+
+  border-width: 12px 7px 0;
+  border-color: transparent;
+  border-top-color: #585757;
+  background-color: transparent;
+
+  cursor: pointer;
+  transition: border-top-color 0.3s ease, outline-color 0.3s ease;
+}
+
+.catalog-sort__order-button::before {
+  top: 50%;
   left: 50%;
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+
+  width: 30px;
+  height: 30px;
+
+  content: '';
+  transform: translate(-50%, -50%);
 }
 
-.logo {
+.catalog-sort__order-button--up {
+  transform: rotate(180deg);
+}
+
+.catalog-sort__order-button--down {
+  margin-left: 23px;
+}
+
+.catalog-sort__order-button--down::before {
+  transform: translate(-50%, -75%);
+}
+
+.catalog-sort__order-button--active {
+  border-top-color: #c90606;
+
+  pointer-events: none;
+}
+
+.catalog-sort__order-button:hover {
+  border-top-color: #c90606;
+}
+
+.catalog-sort__order-button:focus {
+  outline: 1px solid #c90606;
+  outline-offset: 1px;
+}
+
+.catalog-filter__price-range {
   position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
+  display: flex;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.catalog-filter__price-range::after {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+
+  display: block;
+
+  width: 15px;
+  height: 2px;
+  margin-top: -2px;
+
+  background-color: #585757;
+
+  content: '';
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(to bottom, rgba(var(--background-start-rgb), 1), rgba(var(--callout-rgb), 0.5));
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(to bottom, transparent 0%, rgb(var(--background-end-rgb)) 40%);
-    z-index: 1;
-  }
+.catalog-filter__price-range input {
+  width: 85px;
+  height: 30px;
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.catalog-filter__price-range input::-webkit-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
+.catalog-filter__price-range input::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.6);
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.catalog-filter__price-range input:-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.catalog-filter__price-range input::-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.catalog-filter__price-range input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.form-input input {
+  padding: 2px 9px;
+
+  font-size: 14px;
+  line-height: 28px;
+
+  color: #000000;
+  border: 0.7px solid #585757;
+  border-radius: 2px;
+  background-color: transparent;
+
+  transition: border-color 0.3s ease;
+  letter-spacing: 0.05em;
+}
+
+.form-input input[type='number']::-webkit-inner-spin-button {
+  appearance: none;
+}
+
+.form-input input[type='number']:invalid {
+  border: 2px solid #eb5555;
+  outline: none;
+}
+
+.form-input input::-webkit-input-placeholder {
+  opacity: 0.6;
+  color: #000000;
+}
+
+.form-input input::-moz-placeholder {
+  opacity: 0.6;
+  color: #000000;
+}
+
+.form-input input:-ms-input-placeholder {
+  opacity: 0.6;
+  color: #000000;
+}
+
+.form-input input::-ms-input-placeholder {
+  opacity: 0.6;
+  color: #000000;
+}
+
+.form-input input::placeholder {
+  opacity: 0.6;
+  color: #000000;
+}
+
+.form-input input:hover {
+  border-color: rgba(84, 77, 77, 0.65);
+}
+
+.form-input input:focus {
+  outline-color: #c90606;
+}
+
+.form-checkbox {
+  display: flex;
+  overflow: hidden;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.form-checkbox label {
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+
+  font-size: 16px;
+  line-height: 23px;
+
+  cursor: pointer;
+  -webkit-transition: color 0.3s ease;
+  transition: color 0.3s ease;
+}
+
+.form-checkbox label::before {
+  display: block;
+  flex-shrink: 0;
+
+  width: 25px;
+  height: 25px;
+  margin-right: 14px;
+
+  border: 0.7px solid #585757;
+  border-radius: 2px;
+
+  content: '';
+  cursor: pointer;
+  -webkit-transition: border-color 0.3s ease;
+  transition: border-color 0.3s ease;
+}
+
+.form-checkbox label:hover {
+  color: #c90606;
+}
+
+.form-checkbox input:hover + label::before {
+  border-color: #c90606;
+}
+
+.form-checkbox input:focus + label::before {
+  border-color: #c90606;
+}
+
+.form-checkbox input:active + label {
+  color: #c90606;
+}
+
+.form-checkbox input:checked + label::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='13' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.71128 8.86588L.649596 4.82698a.250656.250656 0 0 1 0-.35547L1.67499 3.44498c.09798-.09798.25634-.09798.35433 0l2.67399 2.65804c.09798.09798.25748.09684.35547-.00114L10.9673.136389c.098-.099121.2575-.099121.3566-.00114l1.0265 1.026531c.098.09798.098.25635.0012.35433L5.91441 8.01139l.00114.00114-.8488.85335c-.09798.09798-.25749.09798-.35547 0z' fill='%23585757'/%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.form-checkbox input:disabled + label {
+  color: #dddddd;
+
+  pointer-events: none;
+}
+
+.form-checkbox input:disabled + label::before {
+  border-color: #dddddd;
+  background: #f6f3f3;
+
+  pointer-events: none;
+}
+
+.form-checkbox input:disabled:hover + label {
+  pointer-events: none;
+}
+
+.form-checkbox input:disabled:hover + label::before {
+  border-color: #dddddd;
+  background: #f6f3f3;
+
+  pointer-events: none;
+}
+
+.catalog-filter {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+
+  grid-area: filters;
+}
+
+.catalog-filter__title {
+  margin-top: 8px;
+  margin-bottom: 22px;
+
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.catalog-filter__block {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  margin: 0;
+  padding: 31px 0 29px;
+
+  border: none;
+}
+
+.catalog-filter__block::before {
+  top: 0;
+  left: -2px;
+  position: absolute;
+
+  width: 215px;
+  height: 1px;
+
+  background-color: #dddada;
+
+  content: '';
+}
+
+.catalog-filter__block:last-child::after {
+  bottom: 0;
+  left: -2px;
+  position: absolute;
+
+  width: 205px;
+  height: 1px;
+
+  background-color: #dddada;
+
+  content: '';
+}
+
+.catalog-filter__block-title {
+  float: left;
+
+  width: 100%;
+  margin-bottom: 20px;
+
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 25px;
+}
+
+.catalog-filter__block-item {
+  margin-bottom: 10px;
+}
+
+.catalog-filter__block-item:last-child {
+  margin-bottom: 0;
+}
+
+.catalog-filter__reset-btn {
+  align-self: flex-start;
+
+  min-width: 160px;
+  margin-top: 24px;
+}
+
+.product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  width: 220px;
+  min-height: 310px;
+  padding: 9px 9px 14px;
+
+  font-size: 14px;
+  line-height: 15px;
+
+  border: 1px solid #dddada;
+  background-color: #ffffff;
+
+  letter-spacing: 0.05em;
+}
+
+.product-card img {
+  width: 100%;
+  height: 190px;
+  margin: 0 auto;
+
+  object-fit: scale-down;
+}
+
+.product-card__rate {
+  align-items: flex-start;
+
+  width: 100%;
+  margin: 2px 0 0 0;
+
+  font-size: 10px;
+  line-height: 15px;
+
+  color: #585757;
+
+  letter-spacing: 0.1em;
+}
+
+.product-card__buttons,
+.product-card__info {
+  display: flex;
+  align-content: center;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.product-card__buttons {
+  margin-top: auto;
+}
+
+.product-card__buttons a:focus {
+  outline: 1px solid #c90606;
+  outline-offset: 1px;
+}
+
+.product-card__info {
+  flex-wrap: wrap;
+
+  margin: 9px 5px 8px 4px;
+}
+
+.product-card__title {
+  width: 60%;
+  margin: 0;
+  padding-top: 4px;
+
+  font-size: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+
+  letter-spacing: 0.05em;
+  text-overflow: ellipsis;
+}
+
+.product-card__price {
+  width: 40%;
+  margin: 0;
+  padding-top: 4px;
+
+  text-align: right;
+}
+
+.pagination {
+  width: 100%;
+
+  grid-area: pagination;
+}
+
+.pagination__list {
+  display: flex;
+  justify-content: flex-end;
+
+  margin: 0 19px 0 0;
+  padding: 0;
+
+  list-style: none;
+}
+
+.pagination__page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 25px;
+  height: 25px;
+  margin-left: 10px;
+
+  font-size: 12px;
+  line-height: 20px;
+
+  letter-spacing: 0.05em;
+}
+
+.pagination__page--active {
+  color: #ffffff;
+  border-radius: 2px;
+  background-color: #131212;
+
+  pointer-events: none;
+}
+
+.pagination__page--next a,
+.pagination__page--prev a {
+  padding: 2px 15px 2px 15px;
+}
+
+.pagination__page-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+
+  border: 0.7px solid #585757;
+  border-radius: 2px;
+
+  transition: color 0.3s ease, border-color 0.3s ease;
+}
+
+.pagination__page-link:hover {
+  color: #c90606;
+}
+
+.pagination__page-link:active {
+  border-color: #545454;
+}
+
+.page-content__pagination {
+  margin: 26px 0 0 0;
 }
