--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,446 +1,14 @@
-.catalog {
-  display: grid;
-  align-content: start;
-  align-items: start;
-  justify-content: start;
-
-  width: 100%;
-
-  gap: 0 25px;
-  grid-template-areas: 'filters sorter' 'filters catalog' 'filters pagination';
-  grid-template-columns: 215px 1fr;
-  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
-  grid-template-rows: min-content 1fr min-content;
-  justify-items: start;
-}
-
 .catalog__cards {
   margin: 30px 0 0;
 }
 
 .cards {
   display: grid;
-  align-content: flex-start;
-  justify-content: flex-start;
+  align-content: center;
+  justify-content: center;
 
   gap: 20px;
-  grid-area: catalog;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.catalog-sort {
-  display: flex;
-  justify-content: flex-start;
-
-  width: 100%;
-  padding-top: 3px;
-
-  font-size: 16px;
-  line-height: 20px;
-
-  letter-spacing: 0.05em;
-
-  grid-area: sorter;
-}
-
-.catalog-sort__title {
-  margin: 0 20px 0 0;
-
-  font: inherit;
-
-  color: #000000;
-}
-
-.catalog-sort__type {
-  display: flex;
-
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
-
-  color: #585757;
-}
-
-.catalog-sort__type-button {
-  position: relative;
-
-  padding: 0;
-
-  color: #585757;
-  border: none;
-  background-color: rgba(255, 255, 255, 0);
-
-  cursor: pointer;
-  transition: color 0.3s ease, outline-color 0.3s ease;
-  letter-spacing: 0.05em;
-}
-
-.catalog-sort__type-button:not(:last-child) {
-  margin-right: 30px;
-}
-
-.catalog-sort__type-button:hover {
-  color: #c90606;
-}
-
-.catalog-sort__type-button:focus {
-  outline: 1px solid #c90606;
-  outline-offset: 1px;
-}
-
-.catalog-sort__type-button--active {
-  color: #000000;
-
-  pointer-events: none;
-}
-
-.catalog-sort__type-button--active::before {
-  bottom: -3px;
-  position: absolute;
-
-  width: 100%;
-  height: 2px;
-
-  background-color: #c90606;
-
-  content: '';
-}
-
-.catalog-sort__order {
-  display: flex;
-  align-items: center;
-
-  margin-right: 9px;
-  margin-left: auto;
-}
-
-.catalog-sort__order-button {
-  position: relative;
-
-  width: 0;
-  height: 0;
-  padding: 0;
-
-  border-width: 12px 7px 0;
-  border-color: transparent;
-  border-top-color: #585757;
-  background-color: transparent;
-
-  cursor: pointer;
-  transition: border-top-color 0.3s ease, outline-color 0.3s ease;
-}
-
-.catalog-sort__order-button::before {
-  top: 50%;
-  left: 50%;
-  position: absolute;
-
-  width: 30px;
-  height: 30px;
-
-  content: '';
-  transform: translate(-50%, -50%);
-}
-
-.catalog-sort__order-button--up {
-  transform: rotate(180deg);
-}
-
-.catalog-sort__order-button--down {
-  margin-left: 23px;
-}
-
-.catalog-sort__order-button--down::before {
-  transform: translate(-50%, -75%);
-}
-
-.catalog-sort__order-button--active {
-  border-top-color: #c90606;
-
-  pointer-events: none;
-}
-
-.catalog-sort__order-button:hover {
-  border-top-color: #c90606;
-}
-
-.catalog-sort__order-button:focus {
-  outline: 1px solid #c90606;
-  outline-offset: 1px;
-}
-
-.catalog-filter__price-range {
-  position: relative;
-
-  display: flex;
-  justify-content: space-between;
-}
-
-.catalog-filter__price-range::after {
-  top: 50%;
-  left: 50%;
-  position: absolute;
-
-  display: block;
-
-  width: 15px;
-  height: 2px;
-  margin-top: -2px;
-
-  background-color: #585757;
-
-  content: '';
-  -webkit-transform: translateX(-50%);
-  transform: translateX(-50%);
-}
-
-.catalog-filter__price-range input {
-  width: 85px;
-  height: 30px;
-}
-
-.catalog-filter__price-range input::-webkit-input-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.catalog-filter__price-range input::-moz-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.catalog-filter__price-range input:-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.catalog-filter__price-range input::-ms-input-placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.catalog-filter__price-range input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.form-input input {
-  padding: 2px 9px;
-
-  font-size: 14px;
-  line-height: 28px;
-
-  color: #000000;
-  border: 0.7px solid #585757;
-  border-radius: 2px;
-  background-color: transparent;
-
-  transition: border-color 0.3s ease;
-  letter-spacing: 0.05em;
-}
-
-.form-input input[type='number']::-webkit-inner-spin-button {
-  appearance: none;
-}
-
-.form-input input[type='number']:invalid {
-  border: 2px solid #eb5555;
-  outline: none;
-}
-
-.form-input input::-webkit-input-placeholder {
-  opacity: 0.6;
-  color: #000000;
-}
-
-.form-input input::-moz-placeholder {
-  opacity: 0.6;
-  color: #000000;
-}
-
-.form-input input:-ms-input-placeholder {
-  opacity: 0.6;
-  color: #000000;
-}
-
-.form-input input::-ms-input-placeholder {
-  opacity: 0.6;
-  color: #000000;
-}
-
-.form-input input::placeholder {
-  opacity: 0.6;
-  color: #000000;
-}
-
-.form-input input:hover {
-  border-color: rgba(84, 77, 77, 0.65);
-}
-
-.form-input input:focus {
-  outline-color: #c90606;
-}
-
-.form-checkbox {
-  display: flex;
-  overflow: hidden;
-  align-items: flex-start;
-  flex-direction: column;
-}
-
-.form-checkbox label {
-  display: flex;
-  overflow: hidden;
-  align-items: center;
-
-  font-size: 16px;
-  line-height: 23px;
-
-  cursor: pointer;
-  -webkit-transition: color 0.3s ease;
-  transition: color 0.3s ease;
-}
-
-.form-checkbox label::before {
-  display: block;
-  flex-shrink: 0;
-
-  width: 25px;
-  height: 25px;
-  margin-right: 14px;
-
-  border: 0.7px solid #585757;
-  border-radius: 2px;
-
-  content: '';
-  cursor: pointer;
-  -webkit-transition: border-color 0.3s ease;
-  transition: border-color 0.3s ease;
-}
-
-.form-checkbox label:hover {
-  color: #c90606;
-}
-
-.form-checkbox input:hover + label::before {
-  border-color: #c90606;
-}
-
-.form-checkbox input:focus + label::before {
-  border-color: #c90606;
-}
-
-.form-checkbox input:active + label {
-  color: #c90606;
-}
-
-.form-checkbox input:checked + label::before {
-  background-image: url("data:image/svg+xml,%3Csvg width='13' height='9' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.71128 8.86588L.649596 4.82698a.250656.250656 0 0 1 0-.35547L1.67499 3.44498c.09798-.09798.25634-.09798.35433 0l2.67399 2.65804c.09798.09798.25748.09684.35547-.00114L10.9673.136389c.098-.099121.2575-.099121.3566-.00114l1.0265 1.026531c.098.09798.098.25635.0012.35433L5.91441 8.01139l.00114.00114-.8488.85335c-.09798.09798-.25749.09798-.35547 0z' fill='%23585757'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.form-checkbox input:disabled + label {
-  color: #dddddd;
-
-  pointer-events: none;
-}
-
-.form-checkbox input:disabled + label::before {
-  border-color: #dddddd;
-  background: #f6f3f3;
-
-  pointer-events: none;
-}
-
-.form-checkbox input:disabled:hover + label {
-  pointer-events: none;
-}
-
-.form-checkbox input:disabled:hover + label::before {
-  border-color: #dddddd;
-  background: #f6f3f3;
-
-  pointer-events: none;
-}
-
-.catalog-filter {
-  display: flex;
-  flex-direction: column;
-
-  width: 100%;
-
-  grid-area: filters;
-}
-
-.catalog-filter__title {
-  margin-top: 8px;
-  margin-bottom: 22px;
-
-  font-size: 22px;
-  font-weight: 700;
-  line-height: 22px;
-}
-
-.catalog-filter__block {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-
-  width: 100%;
-  margin: 0;
-  padding: 31px 0 29px;
-
-  border: none;
-}
-
-.catalog-filter__block::before {
-  top: 0;
-  left: -2px;
-  position: absolute;
-
-  width: 215px;
-  height: 1px;
-
-  background-color: #dddada;
-
-  content: '';
-}
-
-.catalog-filter__block:last-child::after {
-  bottom: 0;
-  left: -2px;
-  position: absolute;
-
-  width: 205px;
-  height: 1px;
-
-  background-color: #dddada;
-
-  content: '';
-}
-
-.catalog-filter__block-title {
-  float: left;
-
-  width: 100%;
-  margin-bottom: 20px;
-
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 25px;
-}
-
-.catalog-filter__block-item {
-  margin-bottom: 10px;
-}
-
-.catalog-filter__block-item:last-child {
-  margin-bottom: 0;
-}
-
-.catalog-filter__reset-btn {
-  align-self: flex-start;
-
-  min-width: 160px;
-  margin-top: 24px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
 }
 
 .product-card {
@@ -529,8 +97,6 @@
 
 .pagination {
   width: 100%;
-
-  grid-area: pagination;
 }
 
 .pagination__list {
@@ -595,4 +161,14 @@
 
 .page-content__pagination {
   margin: 26px 0 0 0;
+}
+
+@media (max-width: 767px) {
+  .product-card {
+    width: auto;
+  }
+
+  .pagination__list {
+    justify-content: center;
+  }
 }
